wpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APPNAME
  labels:
    app: APPNAME
spec:
  selector:
    matchLabels:
      app: APPNAME
  replicas: 1
  template:
    metadata:
      labels:
        app: APPNAME
    spec:
      containers:
      - name: APPNAME
        image: IMAGE
        ports:
        - containerPort: 80
          name: APPNAME
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3 
      nodeSelector:
        beta.kubernetes.io/arch: ppc64le
