wpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: APPNAME
  name: APPNAME
spec:
  ports:
  - name: APPNAME
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: APPNAME
  sessionAffinity: None
  type: NodePort
